--- a/aula1.html
+++ b/aula1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meu 1° html</title>
+    <title> aula 1</title>
 </head>
 <body>
-   teste 2
+   Este textoaparecerá na tela
 </body>
 </html>
